--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
         <!-- Game Messages -->
-        <div id="gameMessages" class="game-messages"></div>
+        <div id="gameMessages" class="game-messages" style="display:none;"></div>
         <!-- Chat Section -->
         <button id="chatToggle" class="chat-toggle-btn" style="display: none;">
             Toggle Chat
