--- a/public/index.html
+++ b/public/index.html
@@ -76,9 +76,9 @@
             </div>
         </div>
         <!-- Game Messages -->
-        <div id="gameMessages" class="game-messages" style="display:none;"></div>
+        <div id="gameMessages" class="game-messages"></div>
         <!-- Chat Section -->
-        <button id="chatToggle" class="chat-toggle-btn" style="display: none;">
+        <!-- <button id="chatToggle" class="chat-toggle-btn" style="display: none;">
             Toggle Chat
         </button>
         <div id="chatSection" class="chat-section" style="display: none;">
@@ -89,7 +89,7 @@
                     <button id="sendMessage" class="btn-primary">Send</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="game.js"></script>
 </body>
